my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/pr42614.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/pr42614.c:47:7: error: call to undeclared library function 'abs' with type 'int (int)'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   47 |   if (abs ((a == 0)))
      |       ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/pr42614.c:47:7: note: include the header <stdlib.h> or explicitly provide a declaration for 'abs'
1 error generated.
